--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@angular/platform-browser": "~6.1.1",
     "@angular/platform-browser-dynamic": "~6.1.1",
     "@angular/router": "~6.1.1",
-    "@ionic-native/core": "5.0.0-beta.21",
-    "@ionic-native/splash-screen": "5.0.0-beta.21",
-    "@ionic-native/status-bar": "5.0.0-beta.21",
+    "@capacitor/cli": "^1.0.0-beta.8",
+    "@ionic-native/core": "^4.15.0",
+    "@ionic-native/splash-screen": "^4.15.0",
+    "@ionic-native/status-bar": "^4.15.0",
     "@ionic/angular": "4.0.0-beta.12",
     "core-js": "^2.5.3",
+    "firebase": "^5.5.3",
     "rxjs": "6.2.2",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -37,6 +40,7 @@
     "@angular/compiler": "~6.1.1",
     "@angular/compiler-cli": "~6.1.1",
     "@angular/language-service": "~6.1.1",
+    "@capacitor/core": "^1.0.0-beta.8",
     "@ionic/angular-toolkit": "^1.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
