--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@angular/common": "~6.1.1",
     "@angular/core": "~6.1.1",
+    "@angular/fire": "^5.0.2",
     "@angular/forms": "~6.1.1",
     "@angular/http": "~6.1.1",
     "@angular/platform-browser": "~6.1.1",
@@ -26,9 +27,10 @@
     "@ionic-native/status-bar": "^4.15.0",
     "@ionic/angular": "4.0.0-beta.12",
     "core-js": "^2.5.3",
-    "firebase": "^5.5.3",
+    "firebase": "^5.5.4",
     "rxjs": "6.2.2",
     "rxjs-compat": "^6.3.3",
+    "tslib": "^1.9.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
