--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/splash-screen": "^4.15.0",
     "@ionic-native/status-bar": "^4.15.0",
     "@ionic/angular": "4.0.0-beta.12",
+    "cordova-plugin-splashscreen": "5.0.2",
     "core-js": "^2.5.3",
     "firebase": "^5.5.4",
     "rxjs": "6.2.2",
@@ -60,5 +61,10 @@
     "tslint": "~5.11.0",
     "typescript": "~2.9.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-splashscreen": {}
+    }
+  }
 }
