Users can now view am unordered list of created meals & click through to the meal detail page.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "core-js": "^2.5.3",
     "firebase": "^5.5.4",
     "ionic-angular": "^3.9.2",
+    "luxon": "^1.4.3",
     "rxjs": "6.2.2",
     "rxjs-compat": "^6.3.3",
     "tslib": "^1.9.3",
@@ -48,6 +49,7 @@
     "@ionic/angular-toolkit": "^1.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/luxon": "^1.4.0",
     "@types/node": "~10.11.3",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
