--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cordova-plugin-splashscreen": "5.0.2",
     "core-js": "^2.5.3",
     "firebase": "^5.5.4",
+    "firebase-tools": "^5.1.1",
     "ionic-angular": "^3.9.2",
     "luxon": "^1.4.3",
     "rxjs": "6.2.2",
