Major facelift for the splashpage. A bunch of other negligible refreshes. 2/10 on my styling, this was pretty rushed so I traded time I would have spent learning how to effectively integrate ionic components for some shoot-from-the-hip action. Definitely will need refactoring.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
+# ignore my firebase API config file (holds API keys) -> API is currently exposed on GH, fine for development
+# ./src/app/credentials.ts
+
+# Defaults
 *~
 *.sw[mnpcod]
 *.log
