--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@angular/language-service": "~6.1.1",
     "@capacitor/core": "^1.0.0-beta.8",
     "@ionic/angular-toolkit": "^1.0.0",
+    "@ionic/lab": "1.0.11",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/luxon": "^1.4.0",
